--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                                     <img src="picture/feture_2.svg" alt="icon">
                                     <h5 class="color_dark">LP 回购</h5>
                                     <p class="text-white mb--30">
-                                        每笔交易完成后，5% 的代币将自动转入 LP。
+                                        每笔交易完成后，1% 的税费将用于回购代币。
                                     </p>
                                 </div>
                             </div>
@@ -641,7 +641,7 @@
                                     <img src="picture/feture_3.svg" alt="icon">
                                     <h5 class="">营销</h5>
                                     <p class="mb--30">
-                                        5% 的代币将用于营销基金，以维持营销计划、费用和发展。
+                                        1% 的税费将用于营销基金，以维持营销计划、费用和发展。
                                     </p>
                                     <!--<a href="javascript:void(0);" class="more-btn">Learn More..</a>-->
                                 </div>
@@ -670,7 +670,7 @@
                                 白名单
                             </h2>
                             <p class="para_tag">
-                                Words 在私人预售中分配了 50,000,0000  。参与者必须完成所有任务并提交 BSC 地址才能完成并有资格成为白名单。
+                                SWords 在私人预售中分配了 45,000,0000  。参与者必须完成所有任务并提交 BSC 地址才能完成并有资格成为白名单。
 
  总供应量：10亿
 
@@ -752,7 +752,7 @@
             // },
     
             {
-              value: 50,
+              value: 45,
               name: '45%预售',
               label:{
                 color: '#FFB061',
