--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 </div>
                                 <div class="">
                                     <ul class="mainmenu">
-                                        <li><a href="index-zh.html" class="">首页</a></li>
+                                        <li><a href="index.html" class="">首页</a></li>
                                         <li><a href="">预售</a></li>
                                         <!--<li><a href="#about">About</a></li>-->
                                         <!--<li><a href="#token">Token</a></li>-->
