--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                 体力
                             </h2>
                             <p class="para_tag mb--40 text-justify">
-                                每个角色都有自己的物理池，最高200点。每五分钟恢复一点。玩
+                                每个角色都有自己的体力池，最高200点。每五分钟恢复一点。玩
 								家参与战斗时会消耗体力。每场战斗消耗40 / 80 / 120 / 160 / 200体力，
 								具体取决于玩家选择的每场战斗的体力消耗。这意味着在24小时内，
 								每个角色可以获得288点体力，相当于7.2场战斗。
@@ -275,7 +275,7 @@
                         </div>
                         <div class="col-lg-6">
                             <p class="para_tag para_width">
-                                我们让我们声称为 游戏代币 代币提供流通以及将代币添加到我们的奖励池中。每次获胜都会产生 15% 的初始税，然后每天减少 1%，并根据您的权力使用最低索赔税。
+                                我们为 游戏代币 提供流通以及将代币添加到我们的奖励池中。每次获胜都会产生 15% 的初始税，然后每天减少 1%，并根据您的权力使用最低索赔税。
 
 第 1 天
 
