--- a/index.html
+++ b/index.html
@@ -624,7 +624,8 @@
                             <div class="featute_grid">
                                 <div class="how_content">
                                     <img src="picture/feture_2.svg" alt="icon">
-                                    <h5 class="color_dark">LP 回购</h5>
+                                    <h5 class="color_dark">L
+					    代币回购</h5>
                                     <p class="text-white mb--30">
                                         每笔交易完成后，1% 的税费将用于回购代币。
                                     </p>
