--- a/index.html
+++ b/index.html
@@ -1296,6 +1296,16 @@
                                     </sup>
                                 </a>
                             </div>
+
+			    <div class="col-lg-auto col-sm-3 col-4">
+                                <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=Ypyywo50LfEow6jUNEej8WjT1JRZuysK&authKey=ZsQGm32KOzX0BS9k%2Fsq65%2FVkoLRCjFJNZd1aBgnDPbIdvKPSjDR8q2AsV75zsxl3&noverify=0&group_code=634503391" target="_blank" data-sal="slide-up" data-sal-duration="500" data-sal-delay="600">
+                                   QQ群<sup>
+                                        <small>
+                                            <i class="fa fa-arrow-up" aria-hidden="true"></i>
+                                        </small>
+                                    </sup>
+                                </a>
+                            </div>
                             
                         </div>
                     </div>
