--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,7 @@
                             
 
                             <div class="col-lg-auto col-sm-3 col-4">
-                                <a href="" target="_blank" data-sal="slide-up" data-sal-duration="500" data-sal-delay="600">
+                                <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=kR5Ge4hSJFdgBbGjzrEZfX6DN1czP_bU&authKey=HewiM7C3MD937hUvvoCxj%2F5jE9RhcOhVSV0aOXy1s%2BHvev6pgLifkZ328lOULACv&noverify=0&group_code=838765866" target="_blank" data-sal="slide-up" data-sal-duration="500" data-sal-delay="600">
                                     QQ<sup>
                                         <small>
                                             <i class="fa fa-arrow-up" aria-hidden="true"></i>
@@ -1427,22 +1427,7 @@
     <script src="js/web3.js"></script>
     <script src="js/app1.js"></script>
     <div id='google_translate_element' style='position: fixed; bottom: 0px; right: 0px;z-index: 100'></div>
-    <script>
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement(
-                {
-                    pageLanguage: 'en',
-                    // 需要翻译的语言，比如你只需要翻译成越南和英语，这里就只写en,vi
-                    includedLanguages: 'en,zh-CN',
-                    layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-                    // 自动显示翻译横幅，就是翻译后顶部出现的那个
-                    autoDisplay: true,
-                    // 还有些其他参数，由于原插件不再维护，找不到详细api了，将就了，实在不行直接上dom操作
-                },
-                'google_translate_element' // 存放翻译组件元素的id
-            );
-        }
-    </script>
+
     <script src="https://translate.google.cn/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
